# autoclip

./: .gitignore  CLAUDE.md  Makefile  README.md  autoclip.example.yaml  pyproject.toml
benchmarks/: asr_benchmark.py  results-2026-03-16.md
src/autoclip/: __init__.py  __main__.py  cli.py  config.py  models.py  utils.py
src/autoclip/media/: download.py  ffmpeg.py  probe.py
src/autoclip/processing/: finecut.py  prompts.py
src/autoclip/providers/: registry.py  types.py
src/autoclip/providers/asr/: mlx_whisper_local.py  whisper_local.py
src/autoclip/providers/llm/: ollama_local.py  openai_cloud.py
src/autoclip/reporting/: __init__.py  analysis.py  html.py
tests/: test_analysis.py  test_asr.py  test_cli.py  test_config.py  test_export.py  test_finecut.py  test_llm.py  test_media.py  test_models.py
